@@ -706,9 +706,10 @@ class TreeTemplateTools
      * @param bootstrap Tell is real bootstrap values are expected. If so, a property with name TreeTools::BOOTSTRAP will be created and stored at the corresponding node.
      * The property value will be of type Number<double>. Otherwise, an object of type String will be created and stored with the property name propertyName.
      * @param propertyName The name of the property to store. Only used if bootstrap = false.
+    * @param withId Tells if node ids have been stored in the tree. If set at "true", no bootstrap or property values can be read. Node ids are positioned as bootstrap values for internal nodes, and are concatenated to leaf names after a "_" sign.
      * @return A pointer toward a dynamically created subtree.
      */
-    static Node * parenthesisToNode(const std::string& description, bool bootstrap=true, const std::string& propertyName=TreeTools::BOOTSTRAP);
+    static Node * parenthesisToNode(const std::string& description, bool bootstrap=true, const std::string& propertyName=TreeTools::BOOTSTRAP, bool withId=false);
   
     /**
      * @brief Parse a string in the parenthesis format and convert it to
@@ -718,10 +719,11 @@ class TreeTemplateTools
      * @param bootstrap Tell is real bootstrap values are expected. If so, a property with name TreeTools::BOOTSTRAP will be created and stored at the corresponding node.
      * The property value will be of type Number<double>. Otherwise, an object of type String will be created and stored with the property name propertyName.
      * @param propertyName The name of the property to store. Only used if bootstrap = false.
+     * @param withId Tells if node ids have been stored in the tree. If set at "true", no bootstrap or property values can be read. Node ids are positioned as bootstrap values for internal nodes, and are concatenated to leaf names after a "_" sign.
      * @return A pointer toward a dynamically created tree.
      * @throw Exception in case of bad format.
      */
-    static TreeTemplate<Node> * parenthesisToTree(const std::string& description, bool bootstrap=true, const std::string& propertyName=TreeTools::BOOTSTRAP) throw (Exception);
+    static TreeTemplate<Node>* parenthesisToTree(const std::string& description, bool bootstrap = true, const std::string& propertyName = TreeTools::BOOTSTRAP, bool withId = false) throw (Exception);
     
     /**
      * @brief Get the parenthesis description of a subtree.
